Fixed vertical alignment

--- a/client/homebrew/pages/editPage/editPage.less
+++ b/client/homebrew/pages/editPage/editPage.less
@@ -20,7 +20,7 @@
 	.googleDriveStorage img{
 		height	: 20px;
 		padding : 0px;
-		margin  : -5px;
+		margin  : -6px;
 
 		&.inactive {
 			filter: grayscale(1);
